--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -12,7 +12,7 @@
         xmlns:WpfUiConveter="clr-namespace:TqkLibrary.WpfUi.Converters;assembly=TqkLibrary.WpfUi"
         xmlns:st="http://schemas.spicytaco.io/"
         mc:Ignorable="d"
-        Title="$safeprojectname$" WindowStartupLocation="CenterScreen" Height="450" Width="800">
+        Title="{Binding WindowTitle}" WindowStartupLocation="CenterScreen" Height="450" Width="800">
     <Window.DataContext>
         <WindowViewModels:MainWVM/>
     </Window.DataContext>
