--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -11,6 +11,7 @@
         xmlns:WpfUiControl="clr-namespace:TqkLibrary.WpfUi.UserControls;assembly=TqkLibrary.WpfUi"
         xmlns:WpfUiConveter="clr-namespace:TqkLibrary.WpfUi.Converters;assembly=TqkLibrary.WpfUi"
         xmlns:st="http://schemas.spicytaco.io/"
+        Cursor="{Binding Cursor}"
         mc:Ignorable="d"
         Title="{Binding WindowTitle}" WindowStartupLocation="CenterScreen" Height="450" Width="800">
     <Window.DataContext>
