--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -56,6 +56,7 @@
                             <Setter Property="Command" Value="{Binding Command}"/>
                             <Setter Property="Icon" Value="{StaticResource imgCTX}"/>
                             <Setter Property="ItemsSource" Value="{Binding Childs}"/>
+                            <Setter Property="Visibility" Value="{Binding Visibility}"/>
                             <Setter Property="CommandParameter" Value="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType={x:Type ListView}},Path=SelectedItems}"/>
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding ''}" Value="{x:Null}">
